IN DEVELOPMENT ======= 1.2.1-5

- IMPORTANT: removed @{viewIf},  @{templateIf},  @{contentIf}
- IMPORTANT: renamed @{viewVisible to viewToggle}, @{templateVisible to templateToggle}, @{contentVisible to contentToggle}

======= 1.2.1-4

- IMPORTANT: partial.js/picture renamed to partial.js/image

- added: @{css('default.css')}
- added: @{script('default.js')}
- added: @{image('image.jpg', @width {Number}, @height {Number}, @alt {String}, className {String})}
- added: @{favicon('favicon.png')}
- added: @{json(@obj {Object}, @name {String | Optional})}
- added: Number.padLeft(), Number.padRight()  - default char is '0'
- added: @{text()}, @{hidden()}, @{checkbox()}, @{radio()}, @{textarea()}, @{password()}
- added: builders.prepare('schemaName', model); return new object by the schema
- added: markdown - new paragraph // and \\

- updated: htmlEncode, htmlDecode (& = &amp;)
- updated: improvement View engine parser
- updated: @routeJS
- updated: @routeCSS
- updated: @routeImage
- updated: partial.js binary
- updated: String.padLeft(), String.padRight() - default char is ' '
- updated: utils.etag(filename, version)
- updated: utils.async & controller.async (setImmediate)

- renamed: utils.Etag and ETagVersion to: utils.etag() and config.etagVersion

- fixed: static files
- fixed: minify HTML
- fixed: @{if condition} @{endif}
- fixed: problem with empty view
- fixed: etagversion
- fixed: template engine parser (problem with date format)

======= 1.2.1-3

- added: builders.default(schemaName)
- added: utils.noop()
- added: string.count('search text')
- added: string.parseDate()
- added: string.urlEncode()
- added: string.urlDecode()

- updated: clean code
- updated: decrease time expiration in views and templates

- fixed: LESS @import
- fixed: string.htmlEncode(), utils.htmlEncode()

======= 1.2.1-2

- fixed: file upload

======= 1.2.1-1

- added: condition to view engine @{if model.a === model.b} TRUE @{else} FALSE @{endif} (doesnt support nested condition)
