@@ -123,8 +123,8 @@ function Framework() {
 				self.configure();
 			}
 
-			// every 40 minute clear static cache
-			if (count % 40 === 0)
+			// every 5 minute clear static cache
+			if (count % 5 === 0)
 				self.static = {};
 		}
 
