@@ -3,6 +3,8 @@ IN DEVELOPMENT ======= 1.2.1-5
 - IMPORTANT: removed @{viewIf},  @{templateIf},  @{contentIf}
 - IMPORTANT: renamed @{viewVisible to viewToggle}, @{templateVisible to templateToggle}, @{contentVisible to contentToggle}
 
+- updated: decrease time expiration for static cache (5 minutes)
+
 ======= 1.2.1-4
 
 - IMPORTANT: partial.js/picture renamed to partial.js/image
